adding externally managed teams functionality
